Asymm and Symm encryption added

--- a/Cryptography/Cryptography.csproj
+++ b/Cryptography/Cryptography.csproj
@@ -43,12 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsymmetricEncryption.cs" />
     <Compile Include="HashData.cs" />
     <Compile Include="HMAC.cs" />
     <Compile Include="PasswordSecurity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomNumber.cs" />
+    <Compile Include="SymmetricEncryption.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
